tests/build/cases/widget_new/incorrect_when_expr_type1.stderr
error[E0277]: the trait bound `impl zero_ui::prelude::Var<SideOffsets>: zero_ui::prelude::Var<bool>` is not satisfied
  --> cases/widget_new/incorrect_when_expr_type1.rs:9:14
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         margin = 0;
7  | |         background_color = colors::BLACK;
8  | |
9  | |         when *#margin {
   | |              ^ the trait `zero_ui::prelude::Var<bool>` is not implemented for `impl zero_ui::prelude::Var<SideOffsets>`
10 | |             background_color = colors::WHITE;
11 | |         }
12 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `zero_ui::prelude::Var<T>`:
            <implementers-list>
note: required by a bound in `when_condition_expr_var`
  --> $WORKSPACE/zero-ui-core/src/widget_builder.rs
   |
   | pub fn when_condition_expr_var(expr_var: impl Var<bool>) -> BoxedVar<bool> {
   |                                               ^^^^^^^^^ required by this bound in `when_condition_expr_var`
